# vk-bot-porf

./: .gitignore  Cargo.toml  README.md
.cargo/: config
src/: commands.rs  error.rs  lib.rs  main.rs  storage.rs  talk.rs  token
src/talk/: rules.rs
