[package]
name = "vk-bot-porf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rvk = "0.23.0"
rvk_objects = "0.2.0"
rvk_methods = "0.1.0"
reqwest = { version = "0.11.13", default-features = false, features = ["blocking", "json", "rustls-tls"] }
tokio = { version = "1.23.0", features = ["full"] }
serde_json = "1.0.91"
lazy_static = "1.4.0"
parking_lot = "0.12.1"
rand = "0.8.5"
